# otee_challenge

./: CMakeLists.txt  Readme.md  solution.cpp  squares.h  tests.cpp
src/: app.cpp  tests.cpp
src/headers/: squares.h
